exports[`no-conflicting-constraints > invalid(1): <input type=\"number\" min=\"10\" max=\"5\" title=\"{{title}}\"> 1`] = `

  1 | <input type="number" min="10" max="5" title="{{title}}">

`;

exports[`no-conflicting-constraints > invalid(1): <input type=\"number\" min=\"10\" max=\"5\" title=\"{{title}}\"> 2`] = `

Message:
> 1 | <input type="number" min="10" max="5" title="{{title}}">
    |                                    ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(1): <input type=\"range\" min=\"10\" max=\"5\" /> 1`] = `

  1 | <input type="range" min="10" max="5" />

`;

exports[`no-conflicting-constraints > invalid(1): <input type=\"range\" min=\"10\" max=\"5\" /> 2`] = `

Message:
> 1 | <input type="range" min="10" max="5" />
    |                                  ^^^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(1): <input type=\"range\" min=\"10\" max=\"5\"> 1`] = `

  1 | <input type="range" min="10" max="5">

`;

exports[`no-conflicting-constraints > invalid(1): <input type=\"range\" min=\"10\" max=\"5\"> 2`] = `

Message:
> 1 | <input type="range" min="10" max="5">
    |                                   ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(1): @container (min-width: 1000px) and (max-width: 500px) {} 1`] = `

  1 | @container (min-width: 1000px) and (max-width: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(1): @container (min-width: 1000px) and (max-width: 500px) {} 2`] = `

Message:
> 1 | @container (min-width: 1000px) and (max-width: 500px) {}
    |                                    ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(1): @media (1000px < width < 500px) {} 1`] = `

  1 | @media (1000px < width < 500px) {}

`;

exports[`no-conflicting-constraints > invalid(1): @media (1000px < width < 500px) {} 2`] = `

Message:
> 1 | @media (1000px < width < 500px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(1000px < width < 500px)\` and \`(1000px < width < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(10): <input minlength=\"10\" maxlength=\"5\"> 1`] = `

  1 | <input minlength="10" maxlength="5">

`;

exports[`no-conflicting-constraints > invalid(10): <input minlength=\"10\" maxlength=\"5\"> 2`] = `

Message:
> 1 | <input minlength="10" maxlength="5">
    |                                  ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(10): @container (min-width: 1000px) and (orientation: landscape) and (min-width: 100px) and (max-width: 500px) {} 1`] = `

  1 | @container (min-width: 1000px) and (orientation: landscape) and (min-width: 100px) and (max-width: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(10): @container (min-width: 1000px) and (orientation: landscape) and (min-width: 100px) and (max-width: 500px) {} 2`] = `

Message:
> 1 | @container (min-width: 1000px) and (orientation: landscape) and (min-width: 100px) and (max-width: 500px) {}
    |                                                                                        ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(10): @media (500px >= width > 500px) {} 1`] = `

  1 | @media (500px >= width > 500px) {}

`;

exports[`no-conflicting-constraints > invalid(10): @media (500px >= width > 500px) {} 2`] = `

Message:
> 1 | @media (500px >= width > 500px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(500px >= width > 500px)\` and \`(500px >= width > 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(10): const minimum = 5; <input type=\"number\" min={minimum + 5} max={5} /> 1`] = `

  1 | const minimum = 5; <input type="number" min={minimum + 5} max={5} />

`;

exports[`no-conflicting-constraints > invalid(10): const minimum = 5; <input type=\"number\" min={minimum + 5} max={5} /> 2`] = `

Message:
> 1 | const minimum = 5; <input type="number" min={minimum + 5} max={5} />
    |                                                                ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(11): <input type=\"\" minlength=\"10\" maxlength=\"5\"> 1`] = `

  1 | <input type="" minlength="10" maxlength="5">

`;

exports[`no-conflicting-constraints > invalid(11): <input type=\"\" minlength=\"10\" maxlength=\"5\"> 2`] = `

Message:
> 1 | <input type="" minlength="10" maxlength="5">
    |                                          ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(11): @container (min-in\\6c ine-size: 1000p\\78) and (max-inline-size: 500px) {} 1`] = `

  1 | @container (min-in\\6c ine-size: 1000p\\78) and (max-inline-size: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(11): @container (min-in\\6c ine-size: 1000p\\78) and (max-inline-size: 500px) {} 2`] = `

Message:
> 1 | @container (min-in\\6c ine-size: 1000p\\78) and (max-inline-size: 500px) {}
    |                                               ^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`inline-size\`: \`(min-in\\6c ine-size: 1000p\\78)\` and \`(max-inline-size: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(11): @media (width: 500px) and (width > 500px) {} 1`] = `

  1 | @media (width: 500px) and (width > 500px) {}

`;

exports[`no-conflicting-constraints > invalid(11): @media (width: 500px) and (width > 500px) {} 2`] = `

Message:
> 1 | @media (width: 500px) and (width > 500px) {}
    |                           ^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(width > 500px)\` and \`(width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(11): const type = \"number\"; <input type={type} min={10} max={5} /> 1`] = `

  1 | const type = "number"; <input type={type} min={10} max={5} />

`;

exports[`no-conflicting-constraints > invalid(11): const type = \"number\"; <input type={type} min={10} max={5} /> 2`] = `

Message:
> 1 | const type = "number"; <input type={type} min={10} max={5} />
    |                                                         ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(12): <input type=\"text\" minlength=\"10\" maxlength=\"5\"> 1`] = `

  1 | <input type="text" minlength="10" maxlength="5">

`;

exports[`no-conflicting-constraints > invalid(12): <input type=\"text\" minlength=\"10\" maxlength=\"5\"> 2`] = `

Message:
> 1 | <input type="text" minlength="10" maxlength="5">
    |                                              ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(12): @media (width: 500px) and (width: 600px) {} 1`] = `

  1 | @media (width: 500px) and (width: 600px) {}

`;

exports[`no-conflicting-constraints > invalid(12): @media (width: 500px) and (width: 600px) {} 2`] = `

Message:
> 1 | @media (width: 500px) and (width: 600px) {}
    |                           ^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(width: 600px)\` and \`(width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(12): @supports (display: grid) { @container (width > 1000px) and (width < 500px) {} } 1`] = `

  1 | @supports (display: grid) { @container (width > 1000px) and (width < 500px) {} }

`;

exports[`no-conflicting-constraints > invalid(12): @supports (display: grid) { @container (width > 1000px) and (width < 500px) {} } 2`] = `

Message:
> 1 | @supports (display: grid) { @container (width > 1000px) and (width < 500px) {} }
    |                                                             ^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(width > 1000px)\` and \`(width < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(12): const minimum = \"10\"; <input type=\"number\" min={minimum} max=\"5\" /> 1`] = `

  1 | const minimum = "10"; <input type="number" min={minimum} max="5" />

`;

exports[`no-conflicting-constraints > invalid(12): const minimum = \"10\"; <input type=\"number\" min={minimum} max=\"5\" /> 2`] = `

Message:
> 1 | const minimum = "10"; <input type="number" min={minimum} max="5" />
    |                                                              ^^^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(13): <input type=\"search\" minlength=\"10\" maxlength=\"5\"> 1`] = `

  1 | <input type="search" minlength="10" maxlength="5">

`;

exports[`no-conflicting-constraints > invalid(13): <input type=\"search\" minlength=\"10\" maxlength=\"5\"> 2`] = `

Message:
> 1 | <input type="search" minlength="10" maxlength="5">
    |                                                ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(13): @media (min-width: 1000px) and (orientation: landscape) and (max-width: 500px) {} 1`] = `

  1 | @media (min-width: 1000px) and (orientation: landscape) and (max-width: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(13): @media (min-width: 1000px) and (orientation: landscape) and (max-width: 500px) {} 2`] = `

Message:
> 1 | @media (min-width: 1000px) and (orientation: landscape) and (max-width: 500px) {}
    |                                                             ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(13): const element = <section><input type=\"number\" min={10} max={5} /></section>; 1`] = `

  1 | const element = <section><input type="number" min={10} max={5} /></section>;

`;

exports[`no-conflicting-constraints > invalid(13): const element = <section><input type=\"number\" min={10} max={5} /></section>; 2`] = `

Message:
> 1 | const element = <section><input type="number" min={10} max={5} /></section>;
    |                                                             ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(14): <input type=\"number\" min={/* keep */ 10} max={5} /> 1`] = `

  1 | <input type="number" min={/* keep */ 10} max={5} />

`;

exports[`no-conflicting-constraints > invalid(14): <input type=\"number\" min={/* keep */ 10} max={5} /> 2`] = `

Message:
> 1 | <input type="number" min={/* keep */ 10} max={5} />
    |                                               ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(14): <input type=\"url\" minlength=\"10\" maxlength=\"5\"> 1`] = `

  1 | <input type="url" minlength="10" maxlength="5">

`;

exports[`no-conflicting-constraints > invalid(14): <input type=\"url\" minlength=\"10\" maxlength=\"5\"> 2`] = `

Message:
> 1 | <input type="url" minlength="10" maxlength="5">
    |                                             ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(14): @media (min-width: 1000px) and (min-width: 100px) and (max-width: 500px) {} 1`] = `

  1 | @media (min-width: 1000px) and (min-width: 100px) and (max-width: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(14): @media (min-width: 1000px) and (min-width: 100px) and (max-width: 500px) {} 2`] = `

Message:
> 1 | @media (min-width: 1000px) and (min-width: 100px) and (max-width: 500px) {}
    |                                                       ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(15): <input type=\"tel\" minlength=\"10\" maxlength=\"5\"> 1`] = `

  1 | <input type="tel" minlength="10" maxlength="5">

`;

exports[`no-conflicting-constraints > invalid(15): <input type=\"tel\" minlength=\"10\" maxlength=\"5\"> 2`] = `

Message:
> 1 | <input type="tel" minlength="10" maxlength="5">
    |                                             ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(15): <input type=\"text\" minLength={10} maxLength={5} /> 1`] = `

  1 | <input type="text" minLength={10} maxLength={5} />

`;

exports[`no-conflicting-constraints > invalid(15): <input type=\"text\" minLength={10} maxLength={5} /> 2`] = `

Message:
> 1 | <input type="text" minLength={10} maxLength={5} />
    |                                              ^ \`minLength\` must not be greater than \`maxLength\`.

`;

exports[`no-conflicting-constraints > invalid(15): @media (min-width: 100px) and (min-width: 1000px) and (max-width: 500px) {} 1`] = `

  1 | @media (min-width: 100px) and (min-width: 1000px) and (max-width: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(15): @media (min-width: 100px) and (min-width: 1000px) and (max-width: 500px) {} 2`] = `

Message:
> 1 | @media (min-width: 100px) and (min-width: 1000px) and (max-width: 500px) {}
    |                                                       ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(16): <input type=\"email\" minlength=\"10\" maxlength=\"5\"> 1`] = `

  1 | <input type="email" minlength="10" maxlength="5">

`;

exports[`no-conflicting-constraints > invalid(16): <input type=\"email\" minlength=\"10\" maxlength=\"5\"> 2`] = `

Message:
> 1 | <input type="email" minlength="10" maxlength="5">
    |                                               ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(16): <input type=\"search\" minLength={10} maxLength={5} /> 1`] = `

  1 | <input type="search" minLength={10} maxLength={5} />

`;

exports[`no-conflicting-constraints > invalid(16): <input type=\"search\" minLength={10} maxLength={5} /> 2`] = `

Message:
> 1 | <input type="search" minLength={10} maxLength={5} />
    |                                                ^ \`minLength\` must not be greater than \`maxLength\`.

`;

exports[`no-conflicting-constraints > invalid(16): @media (min-width: 1000px) and (max-width: 500px) and (max-width: 2000px) {} 1`] = `

  1 | @media (min-width: 1000px) and (max-width: 500px) and (max-width: 2000px) {}

`;

exports[`no-conflicting-constraints > invalid(16): @media (min-width: 1000px) and (max-width: 500px) and (max-width: 2000px) {} 2`] = `

Message:
> 1 | @media (min-width: 1000px) and (max-width: 500px) and (max-width: 2000px) {}
    |                                ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(17): <input type=\"password\" minlength=\"10\" maxlength=\"5\"> 1`] = `

  1 | <input type="password" minlength="10" maxlength="5">

`;

exports[`no-conflicting-constraints > invalid(17): <input type=\"password\" minlength=\"10\" maxlength=\"5\"> 2`] = `

Message:
> 1 | <input type="password" minlength="10" maxlength="5">
    |                                                  ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(17): <input type=\"url\" minLength={10} maxLength={5} /> 1`] = `

  1 | <input type="url" minLength={10} maxLength={5} />

`;

exports[`no-conflicting-constraints > invalid(17): <input type=\"url\" minLength={10} maxLength={5} /> 2`] = `

Message:
> 1 | <input type="url" minLength={10} maxLength={5} />
    |                                             ^ \`minLength\` must not be greater than \`maxLength\`.

`;

exports[`no-conflicting-constraints > invalid(17): @media (min-width: 1000px) and (max-width: 2000px) and (max-width: 500px) {} 1`] = `

  1 | @media (min-width: 1000px) and (max-width: 2000px) and (max-width: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(17): @media (min-width: 1000px) and (max-width: 2000px) and (max-width: 500px) {} 2`] = `

Message:
> 1 | @media (min-width: 1000px) and (max-width: 2000px) and (max-width: 500px) {}
    |                                                        ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(18): <input minlength=\"010\" maxlength=\"005\"> 1`] = `

  1 | <input minlength="010" maxlength="005">

`;

exports[`no-conflicting-constraints > invalid(18): <input minlength=\"010\" maxlength=\"005\"> 2`] = `

Message:
> 1 | <input minlength="010" maxlength="005">
    |                                   ^^^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(18): <input type=\"tel\" minLength={10} maxLength={5} /> 1`] = `

  1 | <input type="tel" minLength={10} maxLength={5} />

`;

exports[`no-conflicting-constraints > invalid(18): <input type=\"tel\" minLength={10} maxLength={5} /> 2`] = `

Message:
> 1 | <input type="tel" minLength={10} maxLength={5} />
    |                                             ^ \`minLength\` must not be greater than \`maxLength\`.

`;

exports[`no-conflicting-constraints > invalid(18): @media (width > 500px) and (width >= 500px) and (width <= 500px) {} 1`] = `

  1 | @media (width > 500px) and (width >= 500px) and (width <= 500px) {}

`;

exports[`no-conflicting-constraints > invalid(18): @media (width > 500px) and (width >= 500px) and (width <= 500px) {} 2`] = `

Message:
> 1 | @media (width > 500px) and (width >= 500px) and (width <= 500px) {}
    |                                                 ^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(width > 500px)\` and \`(width <= 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(19): <input type=\"email\" minLength={10} maxLength={5} /> 1`] = `

  1 | <input type="email" minLength={10} maxLength={5} />

`;

exports[`no-conflicting-constraints > invalid(19): <input type=\"email\" minLength={10} maxLength={5} /> 2`] = `

Message:
> 1 | <input type="email" minLength={10} maxLength={5} />
    |                                               ^ \`minLength\` must not be greater than \`maxLength\`.

`;

exports[`no-conflicting-constraints > invalid(19): <textarea minlength=\"10\" maxlength=\"5\"></textarea> 1`] = `

  1 | <textarea minlength="10" maxlength="5"></textarea>

`;

exports[`no-conflicting-constraints > invalid(19): <textarea minlength=\"10\" maxlength=\"5\"></textarea> 2`] = `

Message:
> 1 | <textarea minlength="10" maxlength="5"></textarea>
    |                                     ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(19): @media (width >= 500px) and (width > 500px) and (width <= 500px) {} 1`] = `

  1 | @media (width >= 500px) and (width > 500px) and (width <= 500px) {}

`;

exports[`no-conflicting-constraints > invalid(19): @media (width >= 500px) and (width > 500px) and (width <= 500px) {} 2`] = `

Message:
> 1 | @media (width >= 500px) and (width > 500px) and (width <= 500px) {}
    |                                                 ^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(width > 500px)\` and \`(width <= 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(2): <INPUT TYPE=\"NUMBER\" MIN=\"10\" MAX=\"5\"> 1`] = `

  1 | <INPUT TYPE="NUMBER" MIN="10" MAX="5">

`;

exports[`no-conflicting-constraints > invalid(2): <INPUT TYPE=\"NUMBER\" MIN=\"10\" MAX=\"5\"> 2`] = `

Message:
> 1 | <INPUT TYPE="NUMBER" MIN="10" MAX="5">
    |                                    ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(2): <input type=\"number\" min=\"&#49;0\" max=\"5\" /> 1`] = `

  1 | <input type="number" min="&#49;0" max="5" />

`;

exports[`no-conflicting-constraints > invalid(2): <input type=\"number\" min=\"&#49;0\" max=\"5\" /> 2`] = `

Message:
> 1 | <input type="number" min="&#49;0" max="5" />
    |                                       ^^^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(2): <textarea type=\"{{type}}\" minlength=\"10\" maxlength=\"5\"></textarea> 1`] = `

  1 | <textarea type="{{type}}" minlength="10" maxlength="5"></textarea>

`;

exports[`no-conflicting-constraints > invalid(2): <textarea type=\"{{type}}\" minlength=\"10\" maxlength=\"5\"></textarea> 2`] = `

Message:
> 1 | <textarea type="{{type}}" minlength="10" maxlength="5"></textarea>
    |                                                     ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(2): @container card (width > 1000px) and (width < 500px) {} 1`] = `

  1 | @container card (width > 1000px) and (width < 500px) {}

`;

exports[`no-conflicting-constraints > invalid(2): @container card (width > 1000px) and (width < 500px) {} 2`] = `

Message:
> 1 | @container card (width > 1000px) and (width < 500px) {}
    |                                      ^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(width > 1000px)\` and \`(width < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(2): @media (500px > width > 1000px) {} 1`] = `

  1 | @media (500px > width > 1000px) {}

`;

exports[`no-conflicting-constraints > invalid(2): @media (500px > width > 1000px) {} 2`] = `

Message:
> 1 | @media (500px > width > 1000px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(500px > width > 1000px)\` and \`(500px > width > 1000px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(20): <input type=\"password\" minLength={10} maxLength={5} /> 1`] = `

  1 | <input type="password" minLength={10} maxLength={5} />

`;

exports[`no-conflicting-constraints > invalid(20): <input type=\"password\" minLength={10} maxLength={5} /> 2`] = `

Message:
> 1 | <input type="password" minLength={10} maxLength={5} />
    |                                                  ^ \`minLength\` must not be greater than \`maxLength\`.

`;

exports[`no-conflicting-constraints > invalid(20): <textarea minlength=10 maxlength=5></textarea> 1`] = `

  1 | <textarea minlength=10 maxlength=5></textarea>

`;

exports[`no-conflicting-constraints > invalid(20): <textarea minlength=10 maxlength=5></textarea> 2`] = `

Message:
> 1 | <textarea minlength=10 maxlength=5></textarea>
    |                                  ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(20): @media (width >= 500px) and (width < 500px) and (width <= 500px) {} 1`] = `

  1 | @media (width >= 500px) and (width < 500px) and (width <= 500px) {}

`;

exports[`no-conflicting-constraints > invalid(20): @media (width >= 500px) and (width < 500px) and (width <= 500px) {} 2`] = `

Message:
> 1 | @media (width >= 500px) and (width < 500px) and (width <= 500px) {}
    |                             ^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(width >= 500px)\` and \`(width < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(21): <input type=\"number\" min={10 as number} max={5} /> 1`] = `

  1 | <input type="number" min={10 as number} max={5} />

`;

exports[`no-conflicting-constraints > invalid(21): <input type=\"number\" min={10 as number} max={5} /> 2`] = `

Message:
> 1 | <input type="number" min={10 as number} max={5} />
    |                                              ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(21): <textarea minlength=\"10\" maxlength=\"5\" disabled></textarea> 1`] = `

  1 | <textarea minlength="10" maxlength="5" disabled></textarea>

`;

exports[`no-conflicting-constraints > invalid(21): <textarea minlength=\"10\" maxlength=\"5\" disabled></textarea> 2`] = `

Message:
> 1 | <textarea minlength="10" maxlength="5" disabled></textarea>
    |                                     ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(21): @media (width >= 500px) and (width <= 500px) and (width < 500px) {} 1`] = `

  1 | @media (width >= 500px) and (width <= 500px) and (width < 500px) {}

`;

exports[`no-conflicting-constraints > invalid(21): @media (width >= 500px) and (width <= 500px) and (width < 500px) {} 2`] = `

Message:
> 1 | @media (width >= 500px) and (width <= 500px) and (width < 500px) {}
    |                                                  ^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(width >= 500px)\` and \`(width < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(22): <input type=\"number\" min={10 satisfies number} max={5} /> 1`] = `

  1 | <input type="number" min={10 satisfies number} max={5} />

`;

exports[`no-conflicting-constraints > invalid(22): <input type=\"number\" min={10 satisfies number} max={5} /> 2`] = `

Message:
> 1 | <input type="number" min={10 satisfies number} max={5} />
    |                                                     ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(22): <textarea type=\"text\" type=\"number\" minlength=\"10\" maxlength=\"5\"></textarea> 1`] = `

  1 | <textarea type="text" type="number" minlength="10" maxlength="5"></textarea>

`;

exports[`no-conflicting-constraints > invalid(22): <textarea type=\"text\" type=\"number\" minlength=\"10\" maxlength=\"5\"></textarea> 2`] = `

Message:
> 1 | <textarea type="text" type="number" minlength="10" maxlength="5"></textarea>
    |                                                               ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(22): @media only screen and (min-width: 1000px) and (max-width: 500px) {} 1`] = `

  1 | @media only screen and (min-width: 1000px) and (max-width: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(22): @media only screen and (min-width: 1000px) and (max-width: 500px) {} 2`] = `

Message:
> 1 | @media only screen and (min-width: 1000px) and (max-width: 500px) {}
    |                                                ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(23): <input type minlength=\"10\" maxlength=\"5\"> 1`] = `

  1 | <input type minlength="10" maxlength="5">

`;

exports[`no-conflicting-constraints > invalid(23): <input type minlength=\"10\" maxlength=\"5\"> 2`] = `

Message:
> 1 | <input type minlength="10" maxlength="5">
    |                                       ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(23): <input type=\"number\" min={(10)!} max={5} /> 1`] = `

  1 | <input type="number" min={(10)!} max={5} />

`;

exports[`no-conflicting-constraints > invalid(23): <input type=\"number\" min={(10)!} max={5} /> 2`] = `

Message:
> 1 | <input type="number" min={(10)!} max={5} />
    |                                       ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(23): @media (MIN-WIDTH: 1000PX) AnD (max-width: 500px) {} 1`] = `

  1 | @media (MIN-WIDTH: 1000PX) AnD (max-width: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(23): @media (MIN-WIDTH: 1000PX) AnD (max-width: 500px) {} 2`] = `

Message:
> 1 | @media (MIN-WIDTH: 1000PX) AnD (max-width: 500px) {}
    |                                ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(MIN-WIDTH: 1000PX)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(24): <iframe>Fallback text</iframe><input type=\"number\" min=\"10\" max=\"5\"> 1`] = `

  1 | <iframe>Fallback text</iframe><input type="number" min="10" max="5">

`;

exports[`no-conflicting-constraints > invalid(24): <iframe>Fallback text</iframe><input type=\"number\" min=\"10\" max=\"5\"> 2`] = `

Message:
> 1 | <iframe>Fallback text</iframe><input type="number" min="10" max="5">
    |                                                                  ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(24): <input type=\"number\" min={10} max={5} className={className} /> 1`] = `

  1 | <input type="number" min={10} max={5} className={className} />

`;

exports[`no-conflicting-constraints > invalid(24): <input type=\"number\" min={10} max={5} className={className} /> 2`] = `

Message:
> 1 | <input type="number" min={10} max={5} className={className} />
    |                                    ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(24): @media (min-w\\69 dth: 1000p\\78) and (max-width: 500px) {} 1`] = `

  1 | @media (min-w\\69 dth: 1000p\\78) and (max-width: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(24): @media (min-w\\69 dth: 1000p\\78) and (max-width: 500px) {} 2`] = `

Message:
> 1 | @media (min-w\\69 dth: 1000p\\78) and (max-width: 500px) {}
    |                                     ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-w\\69 dth: 1000p\\78)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(25): <input type=\"number\" min=\"10\" max=\"5\" minlength=\"1\" minlength=\"2\"> 1`] = `

  1 | <input type="number" min="10" max="5" minlength="1" minlength="2">

`;

exports[`no-conflicting-constraints > invalid(25): <input type=\"number\" min=\"10\" max=\"5\" minlength=\"1\" minlength=\"2\"> 2`] = `

Message:
> 1 | <input type="number" min="10" max="5" minlength="1" minlength="2">
    |                                    ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(25): <input type=\"number\" min={(10 as number) + 5} max={5} /> 1`] = `

  1 | <input type="number" min={(10 as number) + 5} max={5} />

`;

exports[`no-conflicting-constraints > invalid(25): <input type=\"number\" min={(10 as number) + 5} max={5} /> 2`] = `

Message:
> 1 | <input type="number" min={(10 as number) + 5} max={5} />
    |                                                    ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(25): @media (min-width: +1e3px) and (max-width: 5e2px) {} 1`] = `

  1 | @media (min-width: +1e3px) and (max-width: 5e2px) {}

`;

exports[`no-conflicting-constraints > invalid(25): @media (min-width: +1e3px) and (max-width: 5e2px) {} 2`] = `

Message:
> 1 | @media (min-width: +1e3px) and (max-width: 5e2px) {}
    |                                ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: +1e3px)\` and \`(max-width: 5e2px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(26): <input minlength=\"10\" maxlength=\"5\" min=\"1\" min=\"2\"> 1`] = `

  1 | <input minlength="10" maxlength="5" min="1" min="2">

`;

exports[`no-conflicting-constraints > invalid(26): <input minlength=\"10\" maxlength=\"5\" min=\"1\" min=\"2\"> 2`] = `

Message:
> 1 | <input minlength="10" maxlength="5" min="1" min="2">
    |                                  ^ \`minlength\` must not be greater than \`maxlength\`.

`;

exports[`no-conflicting-constraints > invalid(26): @media (min-width: 10.5rem) and (max-width: 10rem) {} 1`] = `

  1 | @media (min-width: 10.5rem) and (max-width: 10rem) {}

`;

exports[`no-conflicting-constraints > invalid(26): @media (min-width: 10.5rem) and (max-width: 10rem) {} 2`] = `

Message:
> 1 | @media (min-width: 10.5rem) and (max-width: 10rem) {}
    |                                 ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 10.5rem)\` and \`(max-width: 10rem)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(26): const minimum = 10 as number; <input type=\"number\" min={minimum} max={5} /> 1`] = `

  1 | const minimum = 10 as number; <input type="number" min={minimum} max={5} />

`;

exports[`no-conflicting-constraints > invalid(26): const minimum = 10 as number; <input type=\"number\" min={minimum} max={5} /> 2`] = `

Message:
> 1 | const minimum = 10 as number; <input type="number" min={minimum} max={5} />
    |                                                                       ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(27): @media (min-width: 0) and (width < 0) {} 1`] = `

  1 | @media (min-width: 0) and (width < 0) {}

`;

exports[`no-conflicting-constraints > invalid(27): @media (min-width: 0) and (width < 0) {} 2`] = `

Message:
> 1 | @media (min-width: 0) and (width < 0) {}
    |                           ^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 0)\` and \`(width < 0)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(27): let minimum = 10; <input type=\"number\" min={true ? 10 : minimum} max={5} /> 1`] = `

  1 | let minimum = 10; <input type="number" min={true ? 10 : minimum} max={5} />

`;

exports[`no-conflicting-constraints > invalid(27): let minimum = 10; <input type=\"number\" min={true ? 10 : minimum} max={5} /> 2`] = `

Message:
> 1 | let minimum = 10; <input type="number" min={true ? 10 : minimum} max={5} />
    |                                                                       ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(28): <input type=\"number\" min={10} max={5} minLength={1} minLength={2} /> 1`] = `

  1 | <input type="number" min={10} max={5} minLength={1} minLength={2} />

`;

exports[`no-conflicting-constraints > invalid(28): <input type=\"number\" min={10} max={5} minLength={1} minLength={2} /> 2`] = `

Message:
> 1 | <input type="number" min={10} max={5} minLength={1} minLength={2} />
    |                                    ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(28): @media (min-width: -5px) and (max-width: -10px) {} 1`] = `

  1 | @media (min-width: -5px) and (max-width: -10px) {}

`;

exports[`no-conflicting-constraints > invalid(28): @media (min-width: -5px) and (max-width: -10px) {} 2`] = `

Message:
> 1 | @media (min-width: -5px) and (max-width: -10px) {}
    |                              ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: -5px)\` and \`(max-width: -10px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(29): <input minLength={10} maxLength={5} min={1} min={2} /> 1`] = `

  1 | <input minLength={10} maxLength={5} min={1} min={2} />

`;

exports[`no-conflicting-constraints > invalid(29): <input minLength={10} maxLength={5} min={1} min={2} /> 2`] = `

Message:
> 1 | <input minLength={10} maxLength={5} min={1} min={2} />
    |                                  ^ \`minLength\` must not be greater than \`maxLength\`.

`;

exports[`no-conflicting-constraints > invalid(29): @media (/* keep */ min-width: 1000px) and /* keep */ (max-width: 500px) {} 1`] = `

  1 | @media (/* keep */ min-width: 1000px) and /* keep */ (max-width: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(29): @media (/* keep */ min-width: 1000px) and /* keep */ (max-width: 500px) {} 2`] = `

Message:
> 1 | @media (/* keep */ min-width: 1000px) and /* keep */ (max-width: 500px) {}
    |                                                      ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(/* keep */ min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(3): <input type=\"number\" min={-.5} max={-1} /> 1`] = `

  1 | <input type="number" min={-.5} max={-1} />

`;

exports[`no-conflicting-constraints > invalid(3): <input type=\"number\" min={-.5} max={-1} /> 2`] = `

Message:
> 1 | <input type="number" min={-.5} max={-1} />
    |                                     ^^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(3): <input type=number min=10 max=5> 1`] = `

  1 | <input type=number min=10 max=5>

`;

exports[`no-conflicting-constraints > invalid(3): <input type=number min=10 max=5> 2`] = `

Message:
> 1 | <input type=number min=10 max=5>
    |                               ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(3): @container (height > 1000px) and (height < 500px) {} 1`] = `

  1 | @container (height > 1000px) and (height < 500px) {}

`;

exports[`no-conflicting-constraints > invalid(3): @container (height > 1000px) and (height < 500px) {} 2`] = `

Message:
> 1 | @container (height > 1000px) and (height < 500px) {}
    |                                  ^^^^^^^^^^^^^^^^ Conflicting constraints for \`height\`: \`(height > 1000px)\` and \`(height < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(3): @media (min-width: 1000px) and (max-width: 500px) {} 1`] = `

  1 | @media (min-width: 1000px) and (max-width: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(3): @media (min-width: 1000px) and (max-width: 500px) {} 2`] = `

Message:
> 1 | @media (min-width: 1000px) and (max-width: 500px) {}
    |                                ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(30): @media (min-width: 1000px) and (max-width: 500px), (min-height: 1000px) and (max-height: 500px) {} 1`] = `

  1 | @media (min-width: 1000px) and (max-width: 500px), (min-height: 1000px) and (max-height: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(30): @media (min-width: 1000px) and (max-width: 500px), (min-height: 1000px) and (max-height: 500px) {} 2`] = `

Message:
> 1 | @media (min-width: 1000px) and (max-width: 500px), (min-height: 1000px) and (max-height: 500px) {}
    |                                ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(30): @media (min-width: 1000px) and (max-width: 500px), (min-height: 1000px) and (max-height: 500px) {} 3`] = `

Message:
> 1 | @media (min-width: 1000px) and (max-width: 500px), (min-height: 1000px) and (max-height: 500px) {}
    |                                                                             ^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`height\`: \`(min-height: 1000px)\` and \`(max-height: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(31): @media (min-width: 1000px) and (max-width: 500px) and (min-height: 1000px) and (max-height: 500px) {} 1`] = `

  1 | @media (min-width: 1000px) and (max-width: 500px) and (min-height: 1000px) and (max-height: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(31): @media (min-width: 1000px) and (max-width: 500px) and (min-height: 1000px) and (max-height: 500px) {} 2`] = `

Message:
> 1 | @media (min-width: 1000px) and (max-width: 500px) and (min-height: 1000px) and (max-height: 500px) {}
    |                                ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(31): @media (min-width: 1000px) and (max-width: 500px) and (min-height: 1000px) and (max-height: 500px) {} 3`] = `

Message:
> 1 | @media (min-width: 1000px) and (max-width: 500px) and (min-height: 1000px) and (max-height: 500px) {}
    |                                                                                ^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`height\`: \`(min-height: 1000px)\` and \`(max-height: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(32): @media (min-width: 1000px) and (max-width: 500px) and (min-width: 100em) and (max-width: 50em) {} 1`] = `

  1 | @media (min-width: 1000px) and (max-width: 500px) and (min-width: 100em) and (max-width: 50em) {}

`;

exports[`no-conflicting-constraints > invalid(32): @media (min-width: 1000px) and (max-width: 500px) and (min-width: 100em) and (max-width: 50em) {} 2`] = `

Message:
> 1 | @media (min-width: 1000px) and (max-width: 500px) and (min-width: 100em) and (max-width: 50em) {}
    |                                ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(32): @media (min-width: 1000px) and (max-width: 500px) and (min-width: 100em) and (max-width: 50em) {} 3`] = `

Message:
> 1 | @media (min-width: 1000px) and (max-width: 500px) and (min-width: 100em) and (max-width: 50em) {}
    |                                                                              ^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 100em)\` and \`(max-width: 50em)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(33): @import url(\"layout.css\") (min-width: 1000px) and (max-width: 500px); 1`] = `

  1 | @import url("layout.css") (min-width: 1000px) and (max-width: 500px);

`;

exports[`no-conflicting-constraints > invalid(33): @import url(\"layout.css\") (min-width: 1000px) and (max-width: 500px); 2`] = `

Message:
> 1 | @import url("layout.css") (min-width: 1000px) and (max-width: 500px);
    |                                                   ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(34): @import \"layout.css\" screen and (1000px < width < 500px); 1`] = `

  1 | @import "layout.css" screen and (1000px < width < 500px);

`;

exports[`no-conflicting-constraints > invalid(34): @import \"layout.css\" screen and (1000px < width < 500px); 2`] = `

Message:
> 1 | @import "layout.css" screen and (1000px < width < 500px);
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(1000px < width < 500px)\` and \`(1000px < width < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(35): @media (min-height: 1000px) and (max-height: 500px) {} 1`] = `

  1 | @media (min-height: 1000px) and (max-height: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(35): @media (min-height: 1000px) and (max-height: 500px) {} 2`] = `

Message:
> 1 | @media (min-height: 1000px) and (max-height: 500px) {}
    |                                 ^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`height\`: \`(min-height: 1000px)\` and \`(max-height: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(36): @media (min-device-width: 1000px) and (max-device-width: 500px) {} 1`] = `

  1 | @media (min-device-width: 1000px) and (max-device-width: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(36): @media (min-device-width: 1000px) and (max-device-width: 500px) {} 2`] = `

Message:
> 1 | @media (min-device-width: 1000px) and (max-device-width: 500px) {}
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`device-width\`: \`(min-device-width: 1000px)\` and \`(max-device-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(37): @media (min-device-height: 1000px) and (max-device-height: 500px) {} 1`] = `

  1 | @media (min-device-height: 1000px) and (max-device-height: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(37): @media (min-device-height: 1000px) and (max-device-height: 500px) {} 2`] = `

Message:
> 1 | @media (min-device-height: 1000px) and (max-device-height: 500px) {}
    |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`device-height\`: \`(min-device-height: 1000px)\` and \`(max-device-height: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(38): @media (color > 10) and (color < 5) {} 1`] = `

  1 | @media (color > 10) and (color < 5) {}

`;

exports[`no-conflicting-constraints > invalid(38): @media (color > 10) and (color < 5) {} 2`] = `

Message:
> 1 | @media (color > 10) and (color < 5) {}
    |                         ^^^^^^^^^^^ Conflicting constraints for \`color\`: \`(color > 10)\` and \`(color < 5)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(39): @media (color-index > 10) and (color-index < 5) {} 1`] = `

  1 | @media (color-index > 10) and (color-index < 5) {}

`;

exports[`no-conflicting-constraints > invalid(39): @media (color-index > 10) and (color-index < 5) {} 2`] = `

Message:
> 1 | @media (color-index > 10) and (color-index < 5) {}
    |                               ^^^^^^^^^^^^^^^^^ Conflicting constraints for \`color-index\`: \`(color-index > 10)\` and \`(color-index < 5)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(4): <input type=\"n&#117;mber\" min=\"&#49;0\" max=\"5\"> 1`] = `

  1 | <input type="n&#117;mber" min="&#49;0" max="5">

`;

exports[`no-conflicting-constraints > invalid(4): <input type=\"n&#117;mber\" min=\"&#49;0\" max=\"5\"> 2`] = `

Message:
> 1 | <input type="n&#117;mber" min="&#49;0" max="5">
    |                                             ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(4): <input type=\"number\" min={1e2} max={5e1} /> 1`] = `

  1 | <input type="number" min={1e2} max={5e1} />

`;

exports[`no-conflicting-constraints > invalid(4): <input type=\"number\" min={1e2} max={5e1} /> 2`] = `

Message:
> 1 | <input type="number" min={1e2} max={5e1} />
    |                                     ^^^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(4): @container (inline-size > 1000px) and (inline-size < 500px) {} 1`] = `

  1 | @container (inline-size > 1000px) and (inline-size < 500px) {}

`;

exports[`no-conflicting-constraints > invalid(4): @container (inline-size > 1000px) and (inline-size < 500px) {} 2`] = `

Message:
> 1 | @container (inline-size > 1000px) and (inline-size < 500px) {}
    |                                       ^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`inline-size\`: \`(inline-size > 1000px)\` and \`(inline-size < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(4): @media (max-width: 500px) and (min-width: 1000px) {} 1`] = `

  1 | @media (max-width: 500px) and (min-width: 1000px) {}

`;

exports[`no-conflicting-constraints > invalid(4): @media (max-width: 500px) and (min-width: 1000px) {} 2`] = `

Message:
> 1 | @media (max-width: 500px) and (min-width: 1000px) {}
    |                               ^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(40): @media (monochrome > 10) and (monochrome < 5) {} 1`] = `

  1 | @media (monochrome > 10) and (monochrome < 5) {}

`;

exports[`no-conflicting-constraints > invalid(40): @media (monochrome > 10) and (monochrome < 5) {} 2`] = `

Message:
> 1 | @media (monochrome > 10) and (monochrome < 5) {}
    |                              ^^^^^^^^^^^^^^^^ Conflicting constraints for \`monochrome\`: \`(monochrome > 10)\` and \`(monochrome < 5)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(41): @media (horizontal-viewport-segments > 10) and (horizontal-viewport-segments < 5) {} 1`] = `

  1 | @media (horizontal-viewport-segments > 10) and (horizontal-viewport-segments < 5) {}

`;

exports[`no-conflicting-constraints > invalid(41): @media (horizontal-viewport-segments > 10) and (horizontal-viewport-segments < 5) {} 2`] = `

Message:
> 1 | @media (horizontal-viewport-segments > 10) and (horizontal-viewport-segments < 5) {}
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`horizontal-viewport-segments\`: \`(horizontal-viewport-segments > 10)\` and \`(horizontal-viewport-segments < 5)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(42): @media (vertical-viewport-segments > 10) and (vertical-viewport-segments < 5) {} 1`] = `

  1 | @media (vertical-viewport-segments > 10) and (vertical-viewport-segments < 5) {}

`;

exports[`no-conflicting-constraints > invalid(42): @media (vertical-viewport-segments > 10) and (vertical-viewport-segments < 5) {} 2`] = `

Message:
> 1 | @media (vertical-viewport-segments > 10) and (vertical-viewport-segments < 5) {}
    |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`vertical-viewport-segments\`: \`(vertical-viewport-segments > 10)\` and \`(vertical-viewport-segments < 5)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(43): @media (min-resolution: 2dppx) and (max-resolution: 1dppx) {} 1`] = `

  1 | @media (min-resolution: 2dppx) and (max-resolution: 1dppx) {}

`;

exports[`no-conflicting-constraints > invalid(43): @media (min-resolution: 2dppx) and (max-resolution: 1dppx) {} 2`] = `

Message:
> 1 | @media (min-resolution: 2dppx) and (max-resolution: 1dppx) {}
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`resolution\`: \`(min-resolution: 2dppx)\` and \`(max-resolution: 1dppx)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(44): @media (\\a: 10px) and (min-width: 1000px) and (max-width: 500px) {} 1`] = `

  1 | @media (\\a: 10px) and (min-width: 1000px) and (max-width: 500px) {}

`;

exports[`no-conflicting-constraints > invalid(44): @media (\\a: 10px) and (min-width: 1000px) and (max-width: 500px) {} 2`] = `

Message:
> 1 | @media (\\a: 10px) and (min-width: 1000px) and (max-width: 500px) {}
    |                                               ^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(max-width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(45): @import \"layout.css\" layer(theme) supports(display: grid) (width > 1000px) and (width < 500px); 1`] = `

  1 | @import "layout.css" layer(theme) supports(display: grid) (width > 1000px) and (width < 500px);

`;

exports[`no-conflicting-constraints > invalid(45): @import \"layout.css\" layer(theme) supports(display: grid) (width > 1000px) and (width < 500px); 2`] = `

Message:
> 1 | @import "layout.css" layer(theme) supports(display: grid) (width > 1000px) and (width < 500px);
    |                                                                                ^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(width > 1000px)\` and \`(width < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(5): <input minLength=\"10\" maxLength=\"5\" /> 1`] = `

  1 | <input minLength="10" maxLength="5" />

`;

exports[`no-conflicting-constraints > invalid(5): <input minLength=\"10\" maxLength=\"5\" /> 2`] = `

Message:
> 1 | <input minLength="10" maxLength="5" />
    |                                 ^^^ \`minLength\` must not be greater than \`maxLength\`.

`;

exports[`no-conflicting-constraints > invalid(5): <input type=number min=&#49;0 max=5> 1`] = `

  1 | <input type=number min=&#49;0 max=5>

`;

exports[`no-conflicting-constraints > invalid(5): <input type=number min=&#49;0 max=5> 2`] = `

Message:
> 1 | <input type=number min=&#49;0 max=5>
    |                                   ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(5): @container (block-size > 1000px) and (block-size < 500px) {} 1`] = `

  1 | @container (block-size > 1000px) and (block-size < 500px) {}

`;

exports[`no-conflicting-constraints > invalid(5): @container (block-size > 1000px) and (block-size < 500px) {} 2`] = `

Message:
> 1 | @container (block-size > 1000px) and (block-size < 500px) {}
    |                                      ^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`block-size\`: \`(block-size > 1000px)\` and \`(block-size < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(5): @media (min-width: 1000px) and (width < 500px) {} 1`] = `

  1 | @media (min-width: 1000px) and (width < 500px) {}

`;

exports[`no-conflicting-constraints > invalid(5): @media (min-width: 1000px) and (width < 500px) {} 2`] = `

Message:
> 1 | @media (min-width: 1000px) and (width < 500px) {}
    |                                ^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(min-width: 1000px)\` and \`(width < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(6): <input type=\"number\" min=\"-1.5\" max=\"-2\"> 1`] = `

  1 | <input type="number" min="-1.5" max="-2">

`;

exports[`no-conflicting-constraints > invalid(6): <input type=\"number\" min=\"-1.5\" max=\"-2\"> 2`] = `

Message:
> 1 | <input type="number" min="-1.5" max="-2">
    |                                      ^^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(6): <textarea minLength={10} maxLength={5} /> 1`] = `

  1 | <textarea minLength={10} maxLength={5} />

`;

exports[`no-conflicting-constraints > invalid(6): <textarea minLength={10} maxLength={5} /> 2`] = `

Message:
> 1 | <textarea minLength={10} maxLength={5} />
    |                                     ^ \`minLength\` must not be greater than \`maxLength\`.

`;

exports[`no-conflicting-constraints > invalid(6): @container (1000px < width < 500px) {} 1`] = `

  1 | @container (1000px < width < 500px) {}

`;

exports[`no-conflicting-constraints > invalid(6): @container (1000px < width < 500px) {} 2`] = `

Message:
> 1 | @container (1000px < width < 500px) {}
    |            ^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(1000px < width < 500px)\` and \`(1000px < width < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(6): @media (1000px < width) and (500px > width) {} 1`] = `

  1 | @media (1000px < width) and (500px > width) {}

`;

exports[`no-conflicting-constraints > invalid(6): @media (1000px < width) and (500px > width) {} 2`] = `

Message:
> 1 | @media (1000px < width) and (500px > width) {}
    |                             ^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(1000px < width)\` and \`(500px > width)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(7): <input type=\"number\" min=\"-.5\" max=\"-1\"> 1`] = `

  1 | <input type="number" min="-.5" max="-1">

`;

exports[`no-conflicting-constraints > invalid(7): <input type=\"number\" min=\"-.5\" max=\"-1\"> 2`] = `

Message:
> 1 | <input type="number" min="-.5" max="-1">
    |                                     ^^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(7): <textarea type={type} minLength={10} maxLength={5} /> 1`] = `

  1 | <textarea type={type} minLength={10} maxLength={5} />

`;

exports[`no-conflicting-constraints > invalid(7): <textarea type={type} minLength={10} maxLength={5} /> 2`] = `

Message:
> 1 | <textarea type={type} minLength={10} maxLength={5} />
    |                                                 ^ \`minLength\` must not be greater than \`maxLength\`.

`;

exports[`no-conflicting-constraints > invalid(7): @container (500px > width > 1000px) {} 1`] = `

  1 | @container (500px > width > 1000px) {}

`;

exports[`no-conflicting-constraints > invalid(7): @container (500px > width > 1000px) {} 2`] = `

Message:
> 1 | @container (500px > width > 1000px) {}
    |            ^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(500px > width > 1000px)\` and \`(500px > width > 1000px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(7): @media (width > 500px) and (width <= 500px) {} 1`] = `

  1 | @media (width > 500px) and (width <= 500px) {}

`;

exports[`no-conflicting-constraints > invalid(7): @media (width > 500px) and (width <= 500px) {} 2`] = `

Message:
> 1 | @media (width > 500px) and (width <= 500px) {}
    |                            ^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(width > 500px)\` and \`(width <= 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(8): <input type=\"number\" min=\"1e+2\" max=\"5e1\"> 1`] = `

  1 | <input type="number" min="1e+2" max="5e1">

`;

exports[`no-conflicting-constraints > invalid(8): <input type=\"number\" min=\"1e+2\" max=\"5e1\"> 2`] = `

Message:
> 1 | <input type="number" min="1e+2" max="5e1">
    |                                      ^^^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(8): <textarea type=\"text\" type=\"number\" minLength={10} maxLength={5} /> 1`] = `

  1 | <textarea type="text" type="number" minLength={10} maxLength={5} />

`;

exports[`no-conflicting-constraints > invalid(8): <textarea type=\"text\" type=\"number\" minLength={10} maxLength={5} /> 2`] = `

Message:
> 1 | <textarea type="text" type="number" minLength={10} maxLength={5} />
    |                                                               ^ \`minLength\` must not be greater than \`maxLength\`.

`;

exports[`no-conflicting-constraints > invalid(8): @container (width >= 500px) and (width < 500px) {} 1`] = `

  1 | @container (width >= 500px) and (width < 500px) {}

`;

exports[`no-conflicting-constraints > invalid(8): @container (width >= 500px) and (width < 500px) {} 2`] = `

Message:
> 1 | @container (width >= 500px) and (width < 500px) {}
    |                                 ^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(width >= 500px)\` and \`(width < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(8): @media (width >= 500px) and (width < 500px) {} 1`] = `

  1 | @media (width >= 500px) and (width < 500px) {}

`;

exports[`no-conflicting-constraints > invalid(8): @media (width >= 500px) and (width < 500px) {} 2`] = `

Message:
> 1 | @media (width >= 500px) and (width < 500px) {}
    |                             ^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(width >= 500px)\` and \`(width < 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(9): <input type=\"number\" min=\"10\" max=\"5\" disabled readonly> 1`] = `

  1 | <input type="number" min="10" max="5" disabled readonly>

`;

exports[`no-conflicting-constraints > invalid(9): <input type=\"number\" min=\"10\" max=\"5\" disabled readonly> 2`] = `

Message:
> 1 | <input type="number" min="10" max="5" disabled readonly>
    |                                    ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(9): <input type={\"number\"} min={10} max={5} /> 1`] = `

  1 | <input type={"number"} min={10} max={5} />

`;

exports[`no-conflicting-constraints > invalid(9): <input type={\"number\"} min={10} max={5} /> 2`] = `

Message:
> 1 | <input type={"number"} min={10} max={5} />
    |                                      ^ \`min\` must not be greater than \`max\`.

`;

exports[`no-conflicting-constraints > invalid(9): @container (width: 500px) and (width > 500px) {} 1`] = `

  1 | @container (width: 500px) and (width > 500px) {}

`;

exports[`no-conflicting-constraints > invalid(9): @container (width: 500px) and (width > 500px) {} 2`] = `

Message:
> 1 | @container (width: 500px) and (width > 500px) {}
    |                               ^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(width > 500px)\` and \`(width: 500px)\` cannot both be satisfied.

`;

exports[`no-conflicting-constraints > invalid(9): @media (500px < width <= 500px) {} 1`] = `

  1 | @media (500px < width <= 500px) {}

`;

exports[`no-conflicting-constraints > invalid(9): @media (500px < width <= 500px) {} 2`] = `

Message:
> 1 | @media (500px < width <= 500px) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^ Conflicting constraints for \`width\`: \`(500px < width <= 500px)\` and \`(500px < width <= 500px)\` cannot both be satisfied.

`;
